--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Copy and paste this script (https://raw.githubusercontent.com/Sn0w5t0rm/Pris-Verglukar/0b6358c5047464c94b7fb9bf84539af51ff4e51a/IkeaPriceComparison.js) 
+Copy and paste this script (link to the raw version of the IkeaPriceComparison.js: https://raw.githubusercontent.com/Sn0w5t0rm/Pris-Verglukar/0b6358c5047464c94b7fb9bf84539af51ff4e51a/IkeaPriceComparison.js) 
 in GreaseMonkey (Firefox). https://www.greasespot.net/
 or tampermonkey (Chrome).  https://www.tampermonkey.net/
 
