--- a/README
+++ b/README
@@ -8,3 +8,8 @@ You can change the country you want to see the price of by changing the language
 For example: nl/en for the dutch site, in English. se/sv for the swedish site, in Swedish.
 You can easily see the language when you go the site and look at the url, the part after www.ikea.com/ will be the language
 split by a '/' for example www.ikea.com/se/sv/
+
+You can also have the prices converted to other currencies by changing these variables:
+  - const language = "nl/nl";     // Input the country code of the website you wish to compare to in this format '../..'
+  - const baseCurrency = "EUR";   // The base currency used in the country you are comparing to, (the one you put in above ^^ )
+  - const otherCurrency = "EUR";  // The currency you want that article's price to be shown in (the currency you use)
