--- a/README
+++ b/README
@@ -9,7 +9,7 @@ For example: nl/en for the dutch site, in English. se/sv for the swedish site, i
 You can easily see the language when you go the site and look at the url, the part after www.ikea.com/ will be the language
 split by a '/' for example www.ikea.com/se/sv/
 
-Currency can be changed once per day to limit exchange rates API usage
+Currency and exchange rate are cached for a day to limit exchange rates API usage
 
 You can also have the prices converted to other currencies by changing these variables:
   - const language = "nl/nl";     // Input the country code of the website you wish to compare to in this format '../..'
