--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Copy and paste this script (link to the IkeaPriceComparison.js: https://github.com/Sn0w5t0rm/Pris-Verglukar/blob/main/IkeaPriceComparison.user.js
+Copy and paste this script (link to the IkeaPriceComparison.user.js: https://github.com/Sn0w5t0rm/Pris-Verglukar/blob/main/IkeaPriceComparison.user.js
 in GreaseMonkey (Firefox). https://www.greasespot.net/
 or tampermonkey (Chrome).  https://www.tampermonkey.net/
 
